Implemented websocket to fetch realtie updates from backend

--- a/RealTimeEventTicketingSystem/src/main/resources/application.properties
+++ b/RealTimeEventTicketingSystem/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.application.name=RealTimeEventTicketingSystem
-
+server.port=9090
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.platform=mysql
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
