--- a/RealTimeEventTicketingSystem/src/main/resources/application.properties
+++ b/RealTimeEventTicketingSystem/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=RealTimeEventTicketingSystem
 server.port=9090
-spring.datasource.url=
+spring.datasource.url=jdbc:mysql://localhost:3306/
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.platform=mysql
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.security.enabled=false
