--- a/RealTimeEventTicketingSystem/src/main/resources/application.properties
+++ b/RealTimeEventTicketingSystem/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=RealTimeEventTicketingSystem
 server.port=9090
-spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.url=jdbc:mysql://localhost:3306/event_booking_system_db
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.platform=mysql
