--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.security.enabled=false
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ibrahimadiarraibou@gmail.com
+spring.mail.password=dyxyjrueedxsqjhq
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
