envoi email version 5

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,6 +15,6 @@ spring.security.enabled=false
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=ibrahimadiarraibou@gmail.com
-spring.mail.password=dyxyjrueedxsqjhq
+spring.mail.password=your_password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
