--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.security.enabled=false
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=ibrahimadiarraibou@gmail.com
-spring.mail.password=your_password
+spring.mail.username=your_email
+spring.mail.password=your_passsword
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
